# some-tools

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE.MD  README.md  build-openssl  build.gradle  build.gradle.kts  configure-rust  gradle.properties  lib.groovy  local.properties  notes.md  openssl-bundled.patch  settings.gradle  settings.gradle.kts  something.md
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules-debug.pro  proguard-rules.pro  test.jks
app/src/jni/c/: CMakeLists.txt
app/src/jni/c/codecs/: Base128Lib.c  Base128Lib.h  codecsDo.c  codecsDo.h  doJNI.c  kwm.c  kwm.h  pers_zhc_JNI.h  qmcLib.c  qmcLib.h
app/src/jni/c/floatingboard/: bitmap.c  fb_tools.c  pers_zhc_tools_utils_BitmapUtil.h
app/src/jni/c/getevent/: geteventV2.c
app/src/jni/c/malloc_test/: mallocTest.c
app/src/jni/c/verification/: com_zhc_tools_floatingboard_JNI.h  com_zhc_tools_floatingdrawing_JNI.h  verify.c
app/src/jni/cpp/: CMakeLists.txt
app/src/jni/cpp/pi/: pi.cpp
app/src/jni/cpp/src/: jni_help.cpp  jni_help.h  zhc.cpp  zhc.h
app/src/jni/cpp/src/codecs/: Base128Lib.cpp  Base128Lib.h  codecsDo.cpp  kwm.cpp  kwm.h  qmcLib.cpp  qmcLib.h
app/src/jni/cpp/src/epicycles/: ComplexIntegral.cpp  ComplexIntegral.h  ComplexValue.cpp  ComplexValue.h  Epicycle.cpp  Epicycle.h  FourierSeries.cpp  FourierSeries.h  calcCall.cpp
app/src/jni/cpp/src/floatingboard/: fb_tools.cpp
app/src/jni/cpp/src/jni_h/: pers_zhc_tools_jni_JNI.h  pers_zhc_tools_jni_JNI_CharactersCounter.h  pers_zhc_tools_jni_JNI_Codecs_Callback.h  pers_zhc_tools_jni_JNI_FourierSeriesCalc.h  pers_zhc_tools_jni_JNI_Pi.h  pers_zhc_tools_jni_JNI_Sqlite3.h  pers_zhc_tools_jni_JNI_Sqlite3_SqliteExecCallback.h
app/src/jni/cpp/src/malloc_test/: mallocTest.cpp
app/src/jni/cpp/src/pi/: pi.cpp
app/src/jni/cpp/src/sqlite3/: sqlite3.cpp
app/src/jni/cpp/src/test/: Test.cpp
app/src/main/cpp/: .gitignore  CMakeLists.txt
app/src/main/cpp/src/charactercounter/: Counter.cpp
app/src/main/cpp/src/codecs/: Base128Lib.cpp  codecsDo.cpp
app/src/main/cpp/src/diary/: password_digest.cpp
app/src/main/cpp/src/epicycles/: calcCall.cpp
app/src/main/cpp/src/floatingboard/: fb_tools.cpp
app/src/main/cpp/src/jni_h/: pers_zhc_tools_jni_JNI_Char.h  pers_zhc_tools_jni_JNI_CharUcd.h  pers_zhc_tools_jni_JNI_CharUcd_ProgressCallback.h  pers_zhc_tools_jni_JNI_CharactersCounter.h  pers_zhc_tools_jni_JNI_Email.h  pers_zhc_tools_jni_JNI_FloatingBoard.h  pers_zhc_tools_jni_JNI_FourierSeries.h  pers_zhc_tools_jni_JNI_FourierSeriesCalc_Callback.h  pers_zhc_tools_jni_JNI_JniDemo.h  pers_zhc_tools_jni_JNI_JniTest.h  pers_zhc_tools_jni_JNI_Magic.h  pers_zhc_tools_jni_JNI_Sqlite3.h  pers_zhc_tools_jni_JNI_Sqlite3_Cursor.h  pers_zhc_tools_jni_JNI_Sqlite3_Statement.h  pers_zhc_tools_jni_JNI_StcFlash.h  pers_zhc_tools_jni_JNI_StcFlash_EchoCallback.h  pers_zhc_tools_jni_JNI_SysInfo.h  pers_zhc_tools_jni_JNI_Transfer.h  pers_zhc_tools_jni_JNI_Transfer_Callback.h  pers_zhc_tools_jni_JNI_Utf8.h
app/src/main/cpp/src/magic/: magic.cpp
app/src/main/cpp/src/stc_flash/: serial_jni.cpp  serial_jni.h  stc_flash.cpp
app/src/main/cpp/src/test/: Test.cpp
app/src/main/cpp/src/ucd/: ucd_parse.cpp
app/src/main/jni/cpp/: CMakeLists.txt
app/src/main/jni/cpp/src/: jni_help.cpp  jni_help.h  test.cpp
app/src/main/jni/cpp/src/charactercounter/: Counter.cpp
app/src/main/jni/cpp/src/codecs/: Base128Lib.cpp  Base128Lib.h  codecsDo.cpp  codecsDo.h  kwm.cpp  qmcLib.cpp  qmcLib.h
app/src/main/jni/cpp/src/diary/: password_digest.cpp
app/src/main/jni/cpp/src/epicycles/: calcCall.cpp
app/src/main/jni/cpp/src/jni_h/: pers_zhc_tools_jni_JNI_CharactersCounter.h  pers_zhc_tools_jni_JNI_Codecs.h  pers_zhc_tools_jni_JNI_Diary.h  pers_zhc_tools_jni_JNI_FloatingBoard.h  pers_zhc_tools_jni_JNI_FourierSeries.h  pers_zhc_tools_jni_JNI_FourierSeriesCalc.h  pers_zhc_tools_jni_JNI_FourierSeries_Callback.h  pers_zhc_tools_jni_JNI_JniTest.h  pers_zhc_tools_jni_JNI_MAllocTest.h  pers_zhc_tools_jni_JNI_Magic.h  pers_zhc_tools_jni_JNI_Pi.h  pers_zhc_tools_jni_JNI_Sqlite3.h  pers_zhc_tools_jni_JNI_Sqlite3_Cursor.h  pers_zhc_tools_jni_JNI_StcFlash.h  pers_zhc_tools_jni_JNI_Struct.h
app/src/main/jni/cpp/src/magic/: magic.cpp
app/src/main/jni/cpp/src/sqlite3/: cursor.cpp  sqlite3.cpp  statement.cpp
app/src/main/jni/cpp/src/stc_flash/: serial_jni.cpp  serial_jni.h  stc_flash.cpp
app/src/main/jni/cpp/src/struct/: structMain.cpp
app/src/main/jni/cpp/src/sys_info/: sys_info.cpp
app/src/main/jni/cpp/src/test/: Test.cpp
app/src/main/rust/: .gitignore  Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/main/rust/src/app/: mod.rs
app/src/main/rust/src/bitmap/: bitmap.rs  error.rs  main.rs  mod.rs
app/src/main/rust/src/byte_size/: mod.rs
app/src/main/rust/src/bzip3/: mod.rs
app/src/main/rust/src/char/: char.rs  main.rs  mod.rs
app/src/main/rust/src/char_stat/: mod.rs
app/src/main/rust/src/char_ucd/: char_ucd.rs  errors.rs  lib.rs  main.rs  mod.rs  ucd_database.rs
app/src/main/rust/src/compression/: mod.rs
app/src/main/rust/src/crash/: mod.rs
app/src/main/rust/src/crypto/: bitcoin.rs
app/src/main/rust/src/diary/: mod.rs
app/src/main/rust/src/digest/: lib.rs  mod.rs
app/src/main/rust/src/email/: error.rs  main.rs
app/src/main/rust/src/encoding/: mod.rs
app/src/main/rust/src/exif/: mod.rs
app/src/main/rust/src/fourier_series/: main.rs  mod.rs
app/src/main/rust/src/hello/: main.rs  mod.rs
app/src/main/rust/src/ip/: interface.rs
app/src/main/rust/src/jni_helper/: error.rs  log.rs  mod.rs  string.rs  toast.rs
app/src/main/rust/src/lzma/: errors.rs  mod.rs
app/src/main/rust/src/signals/: mod.rs
app/src/main/rust/src/transfer/: contract.md  errors.rs  interface.rs  lib.rs  main.rs  mod.rs  receive.rs  send.rs
app/src/main/rust/src/transfer/error/: result.rs
app/src/main/rust/src/unicode/: codepoint.rs  grapheme.rs  mod.rs  normalization.rs
app/src/main/rust/src/utf8/: main.rs  mod.rs
buildSrc/: .gitignore  build.gradle  build.gradle.kts
tools/: .scalafmt.conf  build-openssl  build.gradle  configure-rust  store-apk  (+3 more)
(+972 files in other folders)
