[package]
name = "rust_jni"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
byteorder = "1.4.3"
libc = "0.2.98"
pnet = "0.28.0"
lettre = "0.10.0-rc.3"
bczhc_lib = {path = "./third_party/bczhc_rust/lib"}
serde_json = "1.0.78"
quick-xml = "0.22.0"
ndk = { version = "0.6.0", features = ["bitmap"] }
image = "0.24.0"
bytesize = "1.1.0"
thiserror = "1.0.30"
once_cell = "1.10.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
tar = "0.4.38"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
