[package]
name = "rust_jni"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
byteorder = "1.4.3"
libc = "0.2.98"
pnet = { version = "0.31.0", features = ["ipnetwork"] }
pnet_datalink = { version = "0.31.0" }
ipnetwork = "0.19.0"
lettre = "0.10.0-rc.3"
bczhc_lib = { path = "./third_party/bczhc_rust/lib" }
serde_json = "1.0.78"
quick-xml = "0.25.0"
ndk = { version = "0.7.0", features = ["bitmap"] }
image = "0.24.0"
bytesize = "1.1.0"
thiserror = "1.0.30"
once_cell = "1.10.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
tar = "0.4.38"
phone-transfer = { path = "./third_party/bczhc_rust/apps/phone-transfer" }
walkdir = "2.3.2"
pathdiff = "0.2.1"
# `clear_bindings()` workaround
# Because they havn't released a new version containing this PR:
# https://github.com/rusqlite/rusqlite/pull/1268
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev="964443213" }
zip = "0.6.2"
lzma-rs = "0.2.0"
signal = "0.7.0"
nix = "0.25.0"
rayon = "1.5.3"
num-complex = "0.4.2"
sha1 = "0.10.5"
hex = "0.4.3"
unicode-segmentation = "1.10.0"
unicode-normalization = "0.1.22"

[profile.release]
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"
